--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: url("img/Fondo1.jpg") repeat;
+      background: url("img/ChatGPT Image 28 jul 2025, 20_49_00.png") repeat;
       background-size: cover;
       color: #45270a;
     }
@@ -91,7 +91,7 @@
 <body>
   <!-- LOGO / FOTO ARRIBA -->
   <header>
-    <img src="img/logo.png" alt="Tilo Café" class="banner-img" />
+    <img src="french99.jpg" alt="Tilo Café" class="banner-img" />
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo Café!</div>
