--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
   <!-- LOGO / FOTO ARRIBA -->
   <header>
-    <img src="french99.jpg" alt="Tilo Café" class="banner-img" />
+    <img src="img/french99.jpg" alt="Tilo Café" class="banner-img" />
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo Café!</div>
