--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: url("img/ChatGPT Image 28 jul 2025, 20_49_00.png") repeat;
+      background: url("img/") repeat;
       background-size: cover;
-      color: #45270a;
+      color:  #84dcc6;
     }
     header {
       background: rgba(255,255,255,0.9);
