--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: url("img/") repeat;
+      background:#666 ;
       background-size: cover;
       color:  #84dcc6;
     }
