--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <img src="img/french99.jpg" alt="Tilo Café French 3700" class="banner-img" />
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café!</div>
+  <div class="banner">¡Bienvenidos a Tilo Café French 3700!</div>
 
   <!-- Botones de categorías -->
   <div class="categories" id="category-buttons"></div>
