--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       background:#666 ;
       background-size: cover;
-      color:  #84dcc6;
+      color:  #000;
     }
     header {
       background: rgba(255,255,255,0.9);
