--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     .categories button {
       padding: 10px 20px;
-      background-color: #8c6954;
+      background-color: #6b4e3d;
       color: #fff;
       border: none;
       border-radius: 10px;
@@ -49,7 +49,7 @@
       font-size: 1rem;
     }
     .categories button:hover {
-      background-color: #6b4e3d;
+      background-color: #45270a;
     }
     .item-list {
       display: flex;
