--- a/index.html
+++ b/index.html
@@ -8,49 +8,67 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background:#6666 ;
-      background-size: cover;
-      color:  #000;
+      background: #faf7f5;
+      color: #45270a;
     }
     header {
-      background: rgba(255,255,255,0.9);
+      background: #fff;
+      text-align: center;
+      padding: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    .banner-img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      display: block;
+    header img {
+      max-width: 250px;
+      height: auto;
     }
     .banner {
       text-align: center;
-      padding: 10px;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       font-weight: bold;
-      background: rgba(255,255,255,0.8);
-      border-radius: 8px;
-      margin: 15px auto;
-      width: fit-content;
+      margin: 15px;
     }
+    /* Buscador */
+    .search-box {
+      text-align: center;
+      margin: 15px;
+    }
+    .search-box input {
+      width: 90%;
+      max-width: 400px;
+      padding: 10px;
+      border: 2px solid #8c6954;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+    /* Categorías */
     .categories {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      gap: 15px;
       padding: 10px;
     }
-    .categories button {
-      padding: 10px 20px;
-      background-color: #6b4e3d;
+    .category-card {
+      background: #8c6954;
       color: #fff;
-      border: none;
-      border-radius: 10px;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+      width: 140px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: transform 0.2s, background 0.3s;
       font-size: 1rem;
     }
-    .categories button:hover {
-      background-color: #45270a;
+    .category-card:hover {
+      background: #6b4e3d;
+      transform: translateY(-3px);
     }
+    .category-card span {
+      font-size: 2rem;
+      display: block;
+      margin-bottom: 8px;
+    }
+    /* Productos */
     .item-list {
       display: flex;
       flex-wrap: wrap;
@@ -59,27 +77,21 @@
       padding: 20px;
     }
     .item {
-      background: rgba(255, 255, 255, 0.95);
+      background: #fff;
       border-radius: 12px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.15);
       overflow: hidden;
       width: 280px;
       transition: transform 0.2s ease;
     }
-    .item:hover {
-      transform: scale(1.02);
-    }
+    .item:hover { transform: scale(1.02); }
     .item img {
       width: 100%;
       height: 180px;
       object-fit: cover;
     }
-    .item h3 {
-      margin: 10px;
-    }
-    .item p {
-      margin: 0 10px 10px;
-    }
+    .item h3 { margin: 10px; }
+    .item p { margin: 0 10px 10px; }
     .item .price {
       font-weight: bold;
       color: #000;
@@ -89,15 +101,27 @@
   </style>
 </head>
 <body>
-  <!-- LOGO / FOTO ARRIBA -->
+  <!-- Logo -->
   <header>
-    <img src="img/french99.jpg" alt="Tilo Café French 3700" class="banner-img" />
+    <img src="img/french99.jpg" alt="Tilo Café" />
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café French 3700!</div>
+  <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
+
+  <!-- Buscador -->
+  <div class="search-box">
+    <input type="text" id="searchInput" placeholder="🔍 Buscar producto...">
+  </div>
 
   <!-- Botones de categorías -->
-  <div class="categories" id="category-buttons"></div>
+  <div class="categories">
+    <div class="category-card" onclick="renderProducts('Todos')"><span>📋</span>Todos</div>
+    <div class="category-card" onclick="renderProducts('CAFETERÍA')"><span>☕</span>Cafetería</div>
+    <div class="category-card" onclick="renderProducts('COMIDAS')"><span>🍽️</span>Comidas</div>
+    <div class="category-card" onclick="renderProducts('POSTRES')"><span>🍰</span>Postres</div>
+    <div class="category-card" onclick="renderProducts('REFRESCOS')"><span>🥤</span>Refrescos</div>
+    <div class="category-card" onclick="renderProducts('VINOS Y TRAGOS')"><span>🍷</span>Vinos & Tragos</div>
+  </div>
 
   <!-- Lista de productos -->
   <div class="item-list" id="product-list"></div>
@@ -105,29 +129,15 @@
   <script>
     let productos = [];
 
-    // Cargar productos desde productos.json
+    // Cargar productos
     fetch('productos.json')
       .then(response => response.json())
       .then(data => {
         productos = data;
-        renderCategories();
         renderProducts('Todos');
       });
 
-    // Renderizar categorías dinámicamente
-    function renderCategories() {
-      const categorias = ['Todos', ...new Set(productos.map(p => p.categoria))];
-      const container = document.getElementById('category-buttons');
-      container.innerHTML = '';
-      categorias.forEach(cat => {
-        const btn = document.createElement('button');
-        btn.textContent = cat;
-        btn.onclick = () => renderProducts(cat);
-        container.appendChild(btn);
-      });
-    }
-
-    // Renderizar productos
+    // Renderizar productos por categoría
     function renderProducts(categoria) {
       const container = document.getElementById('product-list');
       container.innerHTML = '';
@@ -147,6 +157,31 @@
         container.appendChild(item);
       });
     }
+
+    // Buscador
+    document.getElementById('searchInput').addEventListener('input', function() {
+      const term = this.value.toLowerCase();
+      const filtrados = productos.filter(p => 
+        p.nombre.toLowerCase().includes(term) || 
+        p.descripcion.toLowerCase().includes(term)
+      );
+      const container = document.getElementById('product-list');
+      container.innerHTML = '';
+      filtrados.forEach(p => {
+        const item = document.createElement('div');
+        item.className = 'item';
+        const priceDisplay = (String(p.precio||'').trim().startsWith('$'))
+          ? String(p.precio).trim()
+          : ('$' + (p.precio ?? ''));
+        item.innerHTML = `
+          <img src="${p.imagen}" alt="${p.nombre}">
+          <h3>${p.nombre}</h3>
+          <p>${p.descripcion}</p>
+          <span class="price">${priceDisplay}</span>
+        `;
+        container.appendChild(item);
+      });
+    });
   </script>
 </body>
 </html>
