--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
       padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    header img {
-      max-width: 250px;
-      height: auto;
-    }
-    .banner {
+   header img {
+    max-width: 100%;
+    height: auto;
+    width: 100%;
+    max-height: 280px; /* ajustá este valor para el alto */
+    object-fit: contain;
+   }
+
+     .banner {
       text-align: center;
       font-size: 1.2rem;
       font-weight: bold;
