--- a/index.html
+++ b/index.html
@@ -17,15 +17,11 @@
       padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-   header img {
-    max-width: 100%;
-    height: auto;
-    width: 100%;
-    max-height: 280px; /* ajustá este valor para el alto */
-    object-fit: contain;
-   }
-
-     .banner {
+    header img {
+      max-width: 250px;
+      height: auto;
+    }
+    .banner {
       text-align: center;
       font-size: 1.2rem;
       font-weight: bold;
@@ -107,7 +103,7 @@
 <body>
   <!-- Logo -->
   <header>
-    <img src="img/french99.jpg" alt="Tilo Café" />
+    <img src="img/logo.png" alt="Tilo Café" />
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
@@ -189,4 +185,3 @@
   </script>
 </body>
 </html>
-
