--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #faf7f5;
-      color: #45270a;
+      background: #6666;
+      color: #000;
     }
     header {
       background: #fff;
