--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
   <!-- Logo -->
   <header>
-    <img src="img/fench.jpg" alt="Tilo Café" />
+    <img src="img/french99.jpg" alt="Tilo Café" />
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo Cafe french 3700!</div>
