--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
       text-align: center;
       padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+   }
+    header {
+      background: rgba(255,255,255,0.9);
     }
-    header img {
-      max-width: 250px;
-      height: auto;
-    }
-    .banner {
-      text-align: center;
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin: 15px;
+    .banner-img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+      display: block;
     }
     /* Buscador */
     .search-box {
