--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #6666;
-      color: #000;
+      background: #faf7f5;
+      color: #45270a;
     }
     header {
       background: #fff;
       text-align: center;
       padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-   }
-    header {
-      background: rgba(255,255,255,0.9);
     }
     .banner-img {
       width: 100%;
       height: 250px;
       object-fit: cover;
       display: block;
+    }
+    .banner {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 15px;
     }
     /* Buscador */
     .search-box {
@@ -102,10 +105,10 @@
 <body>
   <!-- Logo -->
   <header>
-    <img src="img/french99.jpg" alt="Tilo Café" />
+    <img src="img/logo.png" alt="Tilo Café" />
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Cafe french 3700!</div>
+  <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
 
   <!-- Buscador -->
   <div class="search-box">
