--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
       padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    .banner-img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      display: block;
+    header img {
+      max-width: 250px;
+      height: auto;
     }
     .banner {
       text-align: center;
