--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <img src="img/french99.jpg" alt="Tilo Café" />
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
+  <div class="banner">¡Bienvenidos a Tilo Café!</div>
 
   <!-- Buscador -->
   <div class="search-box">
