--- a/index.html
+++ b/index.html
@@ -3,134 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carta Tilo Café</title>
+  <title>Carta - Tilo Café</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #faf7f5;
-      color: #45270a;
-    }
-    header {
-      width: 100%;
-      overflow: hidden;
-    }
-    header img {
-      width: 100%;
-      height: 250px;      /* Ajustá la altura del banner */
-      object-fit: cover;  /* Para que no se deforme */
-      display: block;
-    }
-    .banner {
-      text-align: center;
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin: 15px;
-    }
-    /* Buscador */
-    .search-box {
-      text-align: center;
-      margin: 15px;
-    }
-    .search-box input {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border: 2px solid #8c6954;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-    /* Categorías */
-    .categories {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 10px;
-    }
-    .category-card {
-      background: #8c6954;
-      color: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      width: 140px;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.3s;
-      font-size: 1rem;
-    }
-    .category-card:hover {
-      background: #6b4e3d;
-      transform: translateY(-3px);
-    }
-    .category-card span {
-      font-size: 2rem;
-      display: block;
-      margin-bottom: 8px;
-    }
-    /* Productos */
-    .item-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 20px;
-    }
-    .item {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-      overflow: hidden;
-      width: 280px;
-      transition: transform 0.2s ease;
-    }
-    .item:hover { transform: scale(1.02); }
-    .item img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-    .item h3 { margin: 10px; }
-    .item p { margin: 0 10px 10px; }
-    .item .price {
-      font-weight: bold;
-      color: #000;
-      margin: 0 10px 10px;
-      display: block;
-    }
+    body { font-family: Arial, sans-serif; margin:0; background:#f7f3f0; color:#333;}
+    header img { width: 100%; height: 250px; object-fit: cover; display: block; }
+    h1 { text-align:center; padding:20px; color:#806250; }
+    nav { text-align:center; margin-bottom:20px; }
+    nav button { margin:5px; padding:10px 15px; border:none; border-radius:8px; background:#806250; color:#fff; cursor:pointer; }
+    nav button:hover { background:#a67c52; }
+    #searchInput { width:80%; max-width:400px; display:block; margin:0 auto 20px; padding:10px; border:2px solid #806250; border-radius:8px; }
+    #product-list { display:grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap:15px; padding:20px; }
+    .item { background:#fff; padding:15px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
+    .item img { width:100%; height:150px; object-fit:cover; border-radius:8px; }
+    .price { display:block; margin-top:10px; font-weight:bold; color:#806250; }
+    .no-results { grid-column:1/-1; text-align:center; font-size:1.2rem; color:#806250; padding:20px; }
   </style>
 </head>
 <body>
-  <!-- Banner grande arriba -->
   <header>
     <img src="img/french99.jpg" alt="Tilo Café" />
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café Fench 3700!</div>
+  <h1>Menú</h1>
+
+  <!-- Categorías -->
+  <nav>
+    <button onclick="renderProducts('Todos')">Todos</button>
+    <button onclick="renderProducts('CAFETERÍA')">Cafetería</button>
+    <button onclick="renderProducts('COMIDAS')">Comidas</button>
+    <button onclick="renderProducts('POSTRES')">Postres</button>
+    <button onclick="renderProducts('REFRESCOS')">Refrescos</button>
+    <button onclick="renderProducts('VINOS Y TRAGOS')">Vinos y Tragos</button>
+  </nav>
 
   <!-- Buscador -->
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="🔍 Buscar producto...">
-  </div>
-
-  <!-- Botones de categorías -->
-  <div class="categories">
-    <div class="category-card" onclick="renderProducts('Todos')"><span>📋</span>Todos</div>
-    <div class="category-card" onclick="renderProducts('CAFETERÍA')"><span>☕</span>Cafetería</div>
-    <div class="category-card" onclick="renderProducts('COMIDAS')"><span>🍽️</span>Comidas</div>
-    <div class="category-card" onclick="renderProducts('POSTRES')"><span>🍰</span>Postres</div>
-    <div class="category-card" onclick="renderProducts('REFRESCOS')"><span>🥤</span>Refrescos</div>
-    <div class="category-card" onclick="renderProducts('VINOS Y TRAGOS')"><span>🍷</span>Vinos & Tragos</div>
-  </div>
+  <input type="text" id="searchInput" placeholder="🔍 Buscar productos...">
 
   <!-- Lista de productos -->
-  <div class="item-list" id="product-list"></div>
+  <div id="product-list"></div>
 
   <script>
     let productos = [];
-    let categoriaActual = 'Todos'; // categoría activa
+    let categoriaActual = 'Todos';
 
-    // Cargar productos
+    // Cargar productos desde JSON
     fetch('productos.json')
       .then(response => response.json())
       .then(data => {
@@ -138,7 +54,7 @@
         renderProducts('Todos');
       });
 
-    // Renderizar productos
+    // Renderizar productos por categoría + búsqueda
     function renderProducts(categoria, terminoBusqueda = '') {
       categoriaActual = categoria;
       const container = document.getElementById('product-list');
@@ -151,20 +67,20 @@
 
       // Filtrar por búsqueda
       if (terminoBusqueda.trim() !== '') {
-        const term = terminoBusqueda.toLowerCase();
-        filtrados = filtrados.filter(p => 
-          p.nombre.toLowerCase().includes(term) || 
-          p.descripcion.toLowerCase().includes(term)
-        );
+        const palabras = terminoBusqueda.toLowerCase().split(/\s+/);
+        filtrados = filtrados.filter(p => {
+          const texto = (p.nombre + " " + p.descripcion + " " + p.categoria).toLowerCase();
+          return palabras.every(pal => texto.includes(pal));
+        });
       }
 
       // Si no hay resultados
       if (filtrados.length === 0) {
-        container.innerHTML = `<p style="text-align:center; font-size:1.2rem;">😕 No se encontraron productos</p>`;
+        container.innerHTML = `<div class="no-results">⚠️ No se encontraron productos</div>`;
         return;
       }
 
-      // Mostrar productos
+      // Mostrar productos filtrados
       filtrados.forEach(p => {
         const item = document.createElement('div');
         item.className = 'item';
@@ -181,7 +97,7 @@
       });
     }
 
-    // Buscador en tiempo real
+    // Buscador
     document.getElementById('searchInput').addEventListener('input', function() {
       renderProducts(categoriaActual, this.value);
     });
