--- a/index.html
+++ b/index.html
@@ -7,39 +7,41 @@
   <style>
     body { font-family: Arial, sans-serif; margin:0; background:#f7f3f0; color:#333;}
     header img { width: 100%; height: 220px; object-fit: cover; display: block; }
-    h1 { text-align:center; padding:15px; color:#806250; margin-top:60px; }
+    h1 { text-align:center; padding:15px; color:#806250; margin:10px 0; }
 
-    /* Buscador fijo arriba */
-    #searchBar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background:#fff;
-      padding:10px;
-      box-shadow:0 2px 5px rgba(0,0,0,0.1);
-      z-index:1000;
+    /* Buscador */
+    #searchContainer {
+      text-align:center;
+      margin:10px auto 20px;
+      width:90%;
+      max-width:500px;
     }
     #searchInput {
       width:100%;
       padding:12px;
       border:2px solid #806250;
-      border-radius:8px;
+      border-radius:25px;
       font-size:16px;
+      text-align:center;
+      outline:none;
     }
 
-    /* Categorías */
+    /* Categorías con íconos */
     nav { 
       display:grid; 
       grid-template-columns: repeat(auto-fit,minmax(150px,1fr)); 
       gap:10px; 
       padding:15px; 
-      margin-top:10px;
     }
     nav button { 
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      gap:5px;
       padding:15px; 
       border:none; 
-      border-radius:12px; 
+      border-radius:15px; 
       background:#806250; 
       color:#fff; 
       cursor:pointer; 
@@ -48,6 +50,7 @@
       transition:0.2s;
     }
     nav button:hover { background:#a67c52; }
+    nav button span.icon { font-size:22px; }
 
     /* Productos */
     #product-list { 
@@ -86,8 +89,9 @@
 
     /* Responsivo */
     @media (max-width:600px){
-      nav { grid-template-columns: 1fr; }
-      nav button { font-size:18px; padding:18px; }
+      nav { grid-template-columns: 1fr 1fr; }
+      nav button { font-size:15px; padding:20px; }
+      nav button span.icon { font-size:26px; }
     }
   </style>
 </head>
@@ -96,22 +100,23 @@
     <img src="img/french99.jpg" alt="Tilo Café" />
   </header>
 
-  <!-- Buscador fijo -->
-  <div id="searchBar">
+  <h1>Menú</h1>
+
+  <!-- Buscador -->
+  <div id="searchContainer">
     <input type="text" id="searchInput" placeholder="🔍 Buscar productos...">
   </div>
 
-  <h1>Menú</h1>
-
   <!-- Categorías -->
-    <div class="categories">
-    <div class="category-card" onclick="renderProducts('Todos')"><span>📋</span>Todos</div>
-    <div class="category-card" onclick="renderProducts('CAFETERÍA')"><span>☕</span>Cafetería</div>
-    <div class="category-card" onclick="renderProducts('COMIDAS')"><span>🍽️</span>Comidas</div>
-    <div class="category-card" onclick="renderProducts('POSTRES')"><span>🍰</span>Postres</div>
-    <div class="category-card" onclick="renderProducts('REFRESCOS')"><span>🥤</span>Refrescos</div>
-    <div class="category-card" onclick="renderProducts('VINOS Y TRAGOS')"><span>🍷</span>Vinos & Tragos</div>
-  </div>
+  <nav>
+    <button onclick="renderProducts('Todos')"><span class="icon">📋</span>Todos</button>
+    <button onclick="renderProducts('CAFETERÍA')"><span class="icon">☕</span>Cafetería</button>
+    <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
+    <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
+    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤</span>Refrescos</button>
+    <button onclick="renderProducts('VINOS Y TRAGOS')"><span class="icon">🍷</span>Vinos y Tragos</button>
+  </nav>
+
   <!-- Lista de productos -->
   <div id="product-list"></div>
 
