--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
   <nav>
     <button onclick="renderProducts('Todos')"><span class="icon">📋</span>Todos</button>
     <button onclick="renderProducts('CAFETERÍA')"><span class="icon">☕</span>Cafetería</button>
+    <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>" Entradas"</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
-    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤</span>Refrescos</button>
-    <button onclick="renderProducts('VINOS Y TRAGOS')"><span class="icon">🍷</span>Vinos y Tragos</button>
+    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
+    <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Tragos y HAPPY HOUR</button>
+    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐ </span>EVENTOS Y NOVEDADES</button>
   </nav>
 
   <!-- Lista de productos -->
