--- a/admin.html
+++ b/admin.html
@@ -43,14 +43,14 @@
     <label>Categoría</label>
     <select id="categoria" required>
       <option value="">-- Selecciona una categoría --</option>
-      <option value="CAFETERÍA">CAFETERÍA ☕</option>
-      <option value="PICADAS">🥟 ENTRADAS</option>
-      <option value="COMIDAS">🍽️ COMIDAS</option>
-      <option value="POSTRES">🍰 POSTRES</option>
-      <option value="REFRESCOS">🥤 REFRESCOS</option>
-      <option value="VINOS Y TRAGOS">🍷 VINOS Y TRAGOS</option>
-      <option value="TRAGOS">🍹 TRAGOS Y HAPPY HOUR</option>
-      <option value="EVENTOS">⭐ EVENTOS Y NOVEDADES</option>
+      <option value="CAFETERÍA">CAFETERÍA </option>
+      <option value="PICADAS">ENTRADAS</option>
+      <option value="COMIDAS">COMIDAS</option>
+      <option value="POSTRES">POSTRES</option>
+      <option value="REFRESCOS">REFRESCOS</option>
+      <option value="VINOS Y TRAGOS">VINOS Y TRAGOS</option>
+      <option value="TRAGOS">TRAGOS Y HAPPY HOUR</option>
+      <option value="EVENTOS">EVENTOS Y NOVEDADES</option>
     </select>
     <button type="submit">Guardar</button>
   </form>
