--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>ENTRADAS</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
-    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrecas y vinos</button>
+    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
     <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹</span>Tragos Y HAPPY HOUR</button>
-    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS Y NOVEDADESs</button>
+    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS Y NOVEDADES</button>
   </nav>
 
   <!-- Lista de productos -->
