--- a/admin.html
+++ b/admin.html
@@ -47,8 +47,7 @@
       <option value="PICADAS">ENTRADAS</option>
       <option value="COMIDAS">COMIDAS</option>
       <option value="POSTRES">POSTRES</option>
-      <option value="REFRESCOS">REFRESCOS</option>
-      <option value="VINOS Y TRAGOS">VINOS Y TRAGOS</option>
+      <option value="REFRESCOS">REFRESCOS y Vinos</option>
       <option value="TRAGOS">TRAGOS Y HAPPY HOUR</option>
       <option value="EVENTOS">EVENTOS Y NOVEDADES</option>
     </select>
