--- a/admin.html
+++ b/admin.html
@@ -43,13 +43,11 @@
     <label>Categoría</label>
     <select id="categoria" required>
       <option value="">-- Selecciona una categoría --</option>
-      <option value="CAFETERÍA">CAFETERÍA </option>
-      <option value="PICADAS">ENTRADAS</option>
+      <option value="CAFETERÍA">CAFETERÍA</option>
       <option value="COMIDAS">COMIDAS</option>
       <option value="POSTRES">POSTRES</option>
-      <option value="REFRESCOS">REFRESCOS y Vinos</option>
-      <option value="TRAGOS">TRAGOS Y HAPPY HOUR</option>
-      <option value="EVENTOS">EVENTOS Y NOVEDADES</option>
+      <option value="REFRESCOS">REFRESCOS</option>
+      <option value="VINOS Y TRAGOS">VINOS Y TRAGOS</option>
     </select>
     <button type="submit">Guardar</button>
   </form>
